# rust_example

./: .env  Cargo.toml  Dockerfile  README.md  RUSTY.postman_collection.json  docker-compose.yml
migrations/2023-12-18-153649_create_books/: up.sql
migrations/2023-12-18-155142_add_key_to_books/: down.sql  up.sql
src/: config.rs  dal.rs  db.rs  main.rs  schema.rs  traits.rs
src/controllers/: book_controller.rs  mod.rs  ruby_controller.rs
src/controllers/ruby_scripts/: fib.rb
src/models/: books.rs  mod.rs
src/routes/: book_routes.rs  mod.rs
static/: style.css
templates/: _footer.html  _header.html
templates/books/: list.html
templates/errors/: error.html
templates/ruby/: run.html
