[package]
name = "rusty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-rt = "2.9.0"
actix-files = "0.6.2"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
dotenv = "0.15.0"
config = "0.13.4"
diesel = { version = "2.1.4", features = ["postgres", "r2d2", "chrono"] }
env_logger = "0.10.1"
handlebars = { version = "4.5.0", features = ["dir_source"]}
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
